# stashed

./: .gitignore  README.md  com.github.hezral.stashed.yml  meson.build
.github/workflows/: main.yml
data/: application.css  com.github.hezral.stashed.appdata.xml.in  com.github.hezral.stashed.desktop.in  com.github.hezral.stashed.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: activewin.py  clipboard.py  custom_dialog.py  custom_widgets.py  dnd.py  main.py  meson.build  mousewiggle.py  revealer.py  shake_to_reveal.py  stashed.gresource.xml  stashed.in  utils.py  window.py  window.ui
